fix: jumping menu items on touch devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -636,9 +636,17 @@ button, .button {
     margin: 0.5rem 0;
   }
 
+  #title:hover {
+    top: 0;
+  }
+
   .menuItem {
     display: none;
     border-radius: 0;
+  }
+
+  .menuItem:hover {
+    top: 0;
   }
 
   #menuSwitch {
